# Trippy

./: README.md  pyproject.toml
src/: main.py
src/agents/destinations/: top_destinations.py
src/utils/: llm_gemini.py
